# youtube-livechat-assistant

./: .gitignore  LICENSE  README.md  YOUTUBE_API_RESEARCH.md  pyproject.toml  zappa_settings.json
data/: master.db
docs/: onboarding.md
docs/phase0/: README.md
jawed/: api.py  auth.py  database.py  definitions.py  functions.py  schemas.py  settings.py  youtube_client.py
scripts/: capture_live_payload.py  resolver_bench.py
tests/: test_api.py  test_auth.py  test_database.py  test_jawed.py  test_resolver_bench.py  utils.py
